# task_checker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/task_item/: task_item.h
qml/: main.qml  qml.qrc
qml/TaskItem/: TaskItem.qml
src/: CMakeLists.txt  main.cpp
src/task_item/: CMakeLists.txt  task_item.cpp
